[project]
name = "telegram-feed-analyzer"
version = "0.5.2"
description = "Using Generative AI on Telegram for Crisis Reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==0.6.3",
    "click>=8.1.8",
    "dash>=3.0.4",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.2",
    "dash-extensions>=1.0.20",
    "dash-leaflet>=1.0.15",
    "google-api-core>=2.24.2",
    "google-genai==1.7.0",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "telethon>=1.40.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
