[project]
name = "telegram-feed-analyzer"
version = "0.8.0"
description = "Using Generative AI on Telegram for Crisis Reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb==0.6.3",
    "click>=8.1.8",
    "dash==2.18",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=1.7.1",
    "dash-extensions>=1.0.18",
    "dash-leaflet>=1.0.15",
    "google-api-core>=2.24.2",
    "google-genai==1.7.0",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "telethon>=1.40.0",
    "tqdm>=4.67.1",
]
